ng/flux/platform/booting-up/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: caddy
spec:
  replicas: 1
  selector:
    matchLabels:
      app: caddy
  template:
    metadata:
      labels:
        app: caddy
    spec:
      automountServiceAccountToken: false
      containers:
        - name: caddy
          image: mirror.gcr.io/caddy:2.11.4@sha256:844f60b64e4724a5aa8245e019dace0d3f199f7433ce6c57676cb30a920dbad9
          securityContext:
            allowPrivilegeEscalation: false
            capabilities:
              drop:
                - ALL
              add:
                - NET_BIND_SERVICE
            seccompProfile:
              type: RuntimeDefault
          ports:
            - containerPort: 80
          volumeMounts:
            - name: config
              mountPath: /etc/caddy/Caddyfile
              subPath: Caddyfile
            - name: html
              mountPath: /srv/index.html
              subPath: index.html
          resources:
            requests:
              cpu: "0"
              memory: "0Mi"
            limits:
              memory: "300Mi"
              cpu: "300m"
      volumes:
        - name: config
          configMap:
            name: caddy-config
        - name: html
          configMap:
            name: caddy-config
