ng/flux/platform/booting-up/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: caddy
spec:
  type: ClusterIP
  selector:
    app: caddy
  ports:
    - name: http
      protocol: TCP
      port: 80
      targetPort: 80
